# sower

./: .dexter.db-shm  .envrc  .formatter.exs  .gitignore  .golangci.yml  .iex-agent.exs  .iex-garden.exs  .iex-server.exs  .iex.exs  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  VERSION  build.rs  dev-agent.json  dev-client-example.json  dev-client.json  dev-client.toml  dev-server-example.json  dev-server.json  dev.hurl  flake.nix  go.mod  go.sum  justfile  mix.exs  openapi.json  process-compose.yml  secrets.age
.forgejo/workflows/: build-x86_64.yaml  build.yaml  check-x86_64.yaml
.services/process-compose/: process-compose.yaml
.woodpecker/: build.yaml  check.yaml  nix.yaml
agent/: .envrc  .formatter.exs  .gitignore  README.md  deps.nix  justfile  mix.exs
agent/config/: dev.exs  runtime.exs  test.exs
agent/lib/: sower_agent.ex
agent/test/: sower_agent_test.exs
apps/garden/: mix.exs
apps/incus_client/: .gitignore  README.md  mix.exs
apps/nix/: .gitignore  README.md  mix.exs
apps/peer_node/: .gitignore  README.md  mix.exs
apps/sower/: .gitignore  mix.exs
apps/sower_agent/: mix.exs
apps/sower_cli/: .gitignore  README.md  mix.exs
apps/sower_client/: mix.exs
apps/sower_dev/: .gitignore  README.md  mix.exs
assets/: tailwind.config.js
cli/: Cargo.toml
cli/src/: main.rs  sower.rs
client/: Cargo.toml  client.gen.go  client.go  config.go  end_to_end_test.go  generate.go  justfile  main.go  nix.go  seed.go  seed_client.go
client-elixir/: .gitignore  README.md  mix.exs
client-elixir/config/: dev.exs  test.exs
client-elixir/lib/: sower_client.ex
client-elixir/test/: sower_client_test.exs
client-go/: client.gen.go  end_to_end_test.go  generate.go  log.go  main.go  seed.go  seed_client.go
client-rust/: Cargo.toml
client-rust/src/: sower.rs
client/client/: client.gen.go  end_to_end_test.go
client/seed/: seed.go
client/src/: main.rs  sower.rs
client/src/sower/: daemon.rs
cmd/cli/: channel-client.go  main.go  seed.go  seed_test.go  services.go
cmd/client/: channel-client.go  config.go  log.go  main.go  nix.go  seed.go  services.go
cmd/sower/: main.go
cmd/sower-activator/: activate.go  credentials.go  handler.go  main.go  protocol.go  server.go
cmd/sower_tree/: .gitignore  justfile  mix.exs  mix.nix  sower-tree.exs  sower_tree
config/: config.exs  dev.exs  prod.exs  runtime.exs  runtime_agent.exs  runtime_garden.exs  runtime_server.exs  test.exs
doc/: ideas.org
docs/: plan-deployment-policy.org  principles.org  spec-deployment-policy.org  spec-seed-trust.org  subscription-rules.md
lib/: sower.ex  sower_web.ex
lib/forge/: forgejo.ex
lib/forgejo/: client.ex  user.ex
lib/git/: git.ex
lib/sower/: accounts.ex  application.ex  authorization.ex  client.ex  config.ex  error_repo.ex  forge.ex  guardian.ex  mailer.ex  nix.ex  orchestration.ex  permissions.ex  plant.ex  repo.ex  schema.ex  scm.ex  seed.ex  seed_store_path.ex  store_path.ex  tree.ex  vault.ex
lib/sower_web/: agent_channel.ex  agent_socket.ex  api_spec.ex  client_channel.ex  client_socket.ex  endpoint.ex  gettext.ex  json_api_router.ex  live_user_auth.ex  presence.ex  router.ex  telemetry.ex  token_auth.ex  tree_channel.ex  ueberauth.ex  user_auth.ex
libs/rexec/: .gitignore  mix.exs
nix/: client-go-package.nix  client-package.nix  client-rust-package.nix  docker-image.nix  egit-skip-submodule.patch  epmd.nix  esbuild-loadpaths.patch  flake-module.nix  flakemodule.nix  home-module.nix  legacy-flake-module.nix  lib.nix  mix.nix  module.nix  nixos-client.nix  nixos-module.nix  nixos-server.nix  nvfetcher.toml  package.nix  part.nix  seed-ci.nix  server-package.nix  sower-tree.nix  sowerjobs.nix  sowerlib.nix  test-end-to-end.nix
nix/_sources/: generated.json  generated.nix
nix/flake/: module.nix  part.nix  sower.nix  sowerjobs.nix
nix/home/: module.nix
nix/nixos/: activator.nix  agent.nix  client.nix  garden.nix  module.nix  seed.nix  server.nix
nix/tests/: e2e.nix  part.nix  (+2 more)
rel/: env.sh.eex
scripts/: rename-field-to-garden.sh
src/: api.rs  main.rs  ui.rs
test/: test_helper.exs
(+688 files in other folders)
