[package]
name = "sower"
version = "0.10.0-dev"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
anyhow = "1"
console = "0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustix = { version = "1.1.4", features = ["fs", "net", "process"] }
sha2 = "0.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
time = { version = "0.3.47", features = ["formatting"] }
