[package]
name = "sower"
version = "0.10.0-rc0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
console = "0.16"
futures = "0.3"
progenitor-client = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustix = { version = "1.1.4", features = ["fs", "net", "process"] }
sha2 = "0.11"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
time = { version = "0.3.47", features = ["formatting"] }

[build-dependencies]
progenitor = "0.14"
prettyplease = "0.2"
syn = "2"
serde_json = "1"
