[package]
name = "sower"
version = "0.2.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive", "color"] }
nix = { version = "0.28.0", features = ["hostname"] }
phoenix_channels_client = { git = "https://github.com/liveview-native/phoenix-channels-client.git", version = "0.9.0" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls", "rustls-tls-native-roots", "tokio-rustls"] }
toml = "0.8.12"
url = "2.5.0"
xdg = "2.5.2"
