[package]
name = "sower"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.1", features = ["derive", "color"] }
hmac = "0.12.1"
jwt = "0.16.0"
nix = { version = "0.28.0", features = ["hostname"] }
phoenix_channels_client = { git = "https://github.com/liveview-native/phoenix-channels-client.git", version = "0.9.0" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.202"
serde_json = "1.0.116"
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls", "rustls-tls-native-roots", "tokio-rustls"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
xdg = "2.5.2"
